CHANGELOG
--------------------------

ClanSphere 2008.3_svn >> 0000-00-00
___________________________________________________________

-> Fixed all modules now use cs_user function
-> Fixed users_remove without loose database integrity
-> Fixed preview of signatures in board (BugtrackerID: 209, Denni)
-> Fixed removing of uploaded files in some modules (BugtrackerID: 198 and 211, Denni)
-> Fixed users hide function in users view (fay-pain)
-> Added function create_user to create every user in the same way (Denni)
-> Completely reworked AJAX solution (duriel, schiri)
-> Added Auto Update function (alcatraz)
-> When changing templates clansphere now again provides changing to the theme with the same name (duriel)
-> Added some navlists and themes (fay-pain)
-> Added cups navlist (duriel)
-> Added rank feature to boardmods module (fay-pain)
-> Added security function for server variables to avoid get or post injections in the future (duriel)
-> Added comment functions to create/edit/remove comments in the same way (fay-pain)
-> Added optional feature that allows guests to create comments in all modules (fay-pain)
-> Added search navlist and articles search as default now (fay-pain)
-> Added categories access check in articles module (duriel)
-> Added default user pictures (duriel)
-> Added global cellspacing variable (duriel)
-> Added pictures mod that allows implementing pictures to all mods easily (duriel)
-> Added the possibility to add automatically created news about a clanwar (duriel)
-> Added squad text (duriel)
-> Added the possibility to hide subforums in the board overview (duriel)
-> Improved squads view with wars, awards and ranks (GaHero)
-> Set httponly flag in cookies [available in PHP 5.2.0 or higher] (Denni)
-> Used some more caching to enhance the performance (duriel)
-> Updated fckeditor to version 2.6.4 beta (hajo)
-> Added comments feature to events and updated it for wars (hajo)


ClanSphere 2008.2.1 >> 2008-09-20