@@ -7,6 +7,7 @@ ___________________________________________________________
 -> Fixed all modules now use cs_user function
 -> Fixed users_remove without loose database integrity
 -> Fixed preview of signatures in board (BugtrackerID: 209, Denni)
+-> Fixed voted several user from same ip (BugtrackerID: 249, alcatraz)
 -> Fixed removing of uploaded files in some modules (BugtrackerID: 198 and 211, Denni)
 -> Fixed users hide function in users view (fay-pain)
 -> Added function create_user to create every user in the same way (Denni)
